# azents

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPMENT.md  LICENSE  README.md  TRADEMARKS.md  __next._full.txt  __next._tree.txt  azents-admin-web.Dockerfile  azents-site.Dockerfile  azents-web.Dockerfile  azents.Dockerfile  docker-compose.azents.yaml  index.html  manifest.webmanifest  robots.txt  sitemap.xml
python/apps/azents/: .env.example  .gitignore  AGENTS.md  adminserver.py  apiserver.py  pyproject.toml
python/apps/azents-runtime-provider-docker/: Dockerfile  pyproject.toml
python/apps/azents-runtime-provider-docker/src/azents_runtime_provider_docker/: __init__.py  aiodocker_api.py  docker_api.py  main.py  models.py  provider.py  runtime_control.py
python/apps/azents-runtime-provider-docker/tests/: test_main_settings.py  test_provider.py
python/apps/azents-runtime-runner/: Dockerfile  pyproject.toml
python/apps/azents-runtime-runner/docker/: azents-git-credential.sh  azents-git-credential_test.sh
python/apps/azents-runtime-runner/src/azents_runtime_runner/: __init__.py  apply_patch.py  main.py  operations.py  workspace.py
python/apps/azents-runtime-runner/tests/: apply_patch_test.py  main_test.py  operations_test.py  workspace_test.py
python/apps/azents/.agents/skills/migration/: SKILL.md
python/apps/azents/.claude/skills/azents-db-debug/: SKILL.md
python/apps/azents/db-schemas/rdb/: README.md  alembic.ini  revision
python/apps/azents/db-schemas/rdb/migrations/: env.py
python/apps/azents/specs/admin/: openapi.json
python/apps/azents/specs/public/: openapi.json
python/apps/azents/src/azents/: __init__.py  app.py  conftest.py  consts.py  placeholder_test.py
python/apps/azents/src/azents/broker/: __init__.py  broadcast.py  broadcast_test.py  deps.py  encoding_test.py  redis.py  redis_test.py  serialization.py  serialization_test.py  types.py
python/apps/azents/src/azents/cli/: __init__.py  team_session_cutover.py
python/apps/azents/src/azents/core/: __init__.py  agent.py  agent_test.py  bip39_english_words.py  builtin_tools.py  builtin_tools_test.py  chatgpt_oauth.py  chatgpt_oauth_test.py  config.py  credentials.py  credentials_test.py  (+57 more)
python/apps/azents/src/cli/: devserver.py  dump_openapi.py  engineworker.py  runtime_control_server.py  runtime_provider_bootstrap.py  scheduler.py  shell.py  system_admin.py  system_admin_test.py  team_session_cutover_test.py
python/apps/azents/typings/aiodocker/: __init__.pyi  containers.pyi  exceptions.pyi
python/libs/az-common/: pyproject.toml
python/libs/az-common/src/azcommon/: datetime.py  di.py  logging.py  logging_test.py  result.py  sync.py  types.py  uuid.py
python/libs/azents-admin-client/: Makefile  azentsadminclient_README.md  config.yaml  pyproject.toml
python/libs/azents-admin-client/.openapi-generator/: FILES
python/libs/azents-admin-client/src/azentsadminclient/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
python/libs/azents-runtime-control/: pyproject.toml
python/libs/azents-runtime-control/scripts/: generate_proto.py
python/libs/azents-runtime-control/src/azents_runtime_control/: __init__.py  apply_patch.py  grpc_provider_client.py  grpc_runner_client.py  grpc_tls.py  provider.py  runner.py
python/libs/azents-runtime-control/tests/: grpc_provider_client_test.py  grpc_runner_client_test.py  grpc_tls_test.py  provider_test.py  runner_test.py
testenv/azents/: .env.example  .gitignore  AGENTS.md  README.md  devserver.py  docker-compose.yaml  preflight.py  pyproject.toml
testenv/azents/contracts/: README.md  bedrock-aws.yaml  browser-oauth.yaml
testenv/azents/e2e/: .gitignore  pyproject.toml
testenv/azents/e2e/src/support/: __init__.py  consts.py  github_validation_proxy.py  helm_render.py  image_generation_openai_proxy.py  oauth_connections.py  runtime_provider_auth.py  slack_provider_fake.py  system_bootstrap.py  utils.py
testenv/azents/e2e/src/tests/: __init__.py  conftest.py  test_external_channel_file_proxy.py  test_external_channel_progress_proxy.py  test_github_validation_proxy.py  test_runtime_provider_auth.py  test_slack_provider_fake.py  test_subscription_usage_proxy.py  test_support_utils.py
testenv/azents/fixtures/: __init__.py  agent-basic.yaml  mock_mcp_server.py
testenv/azents/scripts/: gen-setup-index.py
testenv/azents/setup/: INDEX.md  agent-dummy-key.md  llm-provider-dummy.md  test-user-workspace.md
testenv/azents/testenv/: __init__.py  assertions.py  bootstrap_runner.py  cli.py  client.py  config.py  finalizer.py  fixture_agent_basic.py  fixture_errors.py  fixture_manifest.py  fixture_paths.py  fixture_resources.py  fixture_runner.py  fixture_worktree.py  frontmatter.py  lock.py  prerequisite_consumer.py  prerequisite_contracts.py  prerequisite_errors.py  prerequisite_paths.py  prerequisite_prepare.py  prerequisite_snapshot.py  reclaim.py  runtime_config.py  setup_runner.py  state.py  types.py
testenv/azents/testenv/checks/: __init__.py  base.py  config.py  images.py  infra.py  output.py  ports.py  runner.py  runtime_state.py  system.py  tunnel.py  web.py
testenv/azents/testenv/devserverlib/: __init__.py  alembic.py  compose.py  env.py  paths.py  readiness.py  state.py  tmux.py  web.py
testenv/azents/testenv/live/: __init__.py  chat.py  errors.py  matchers.py  mcp.py  testenv_api.py  tools.py  types.py
testenv/azents/testenv/seed/: __init__.py  agent.py  auth.py  client.py  credentials.py  llm.py  types.py  unique.py  web.py  workspace.py
testenv/azents/testenv/setup_handlers/: __init__.py  agent_dummy_key.py  llm_provider_dummy.py  test_user_workspace.py
testenv/azents/testenv/tests/: __init__.py  test_agent_basic_fixture.py  test_assertions.py  test_bootstrap_runner.py  test_devserver_fixture.py  test_devserver_state.py  test_fixture_manifest.py  test_fixture_runner.py  test_fixture_worktree.py  test_frontmatter.py  test_lock.py  test_prerequisite_consumer.py  test_prerequisite_contracts.py  test_prerequisite_prepare.py  test_setup_runner.py  test_state.py
(+5360 files in other folders)
