[project]
name = "azents-runtime-runner"
version = "0.1.0"
description = "Azents Agent Runtime Runner"
requires-python = ">=3.14"
dependencies = [
    "azents-runtime-control",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
package = true
resolution = "lowest-direct"

[tool.uv.build-backend]
module-name = "azents_runtime_runner"

[build-system]
requires = ["uv_build>=0.9.10,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
azents-runtime-control = { path = "../../libs/azents-runtime-control", editable = true }

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "G", "PLC", "PLE", "PLW", "ANN", "T", "PGH003"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
