[project]
name = "az-common"
version = "0.1.0"
description = "Common library for Azents"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.6.1",
    "aioboto3>=13.3.0",
    "types-aioboto3[aioboto3,s3]>=13.3.0",
    "click>=8.3.1",
    "python-json-logger>=4.0.0",
    "uvicorn>=0.38.0",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.3.2",
    "sentry-sdk>=2.48.0",
    "temporalio>=1.21.1",
    # uuid7 지원
    "uuid6>=2024.7.10",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "pyright>=1.1.400",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "types-pytz>=2025.2",
]

[tool.uv]
package = true
resolution = "lowest-direct"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "W", "F", "B", "I", "G", "PLC", "PLE", "PLW", "ANN", "T", "PGH003"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.uv.build-backend]
module-name = "azcommon"

[build-system]
requires = ["uv_build>=0.9.10"]
build-backend = "uv_build"
